<resources>
    <string name="app_name">KotakMovie</string>

    <string name="description">Description</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="film_duration">Film Duration</string>
    <string name="rating_sample">9.9</string>
    <string name="genre1_genre2_genre3">Genre 1 / Genre 2 / Genre 3</string>
    <string name="back_button">Back Button</string>

    <string name="category">Category: %s</string>
    <string name="connecting">Connecting to Internet</string>
    <string name="try_again">Try Again</string>
    <string name="please_check_your_internet">You are offline. Please check your internet connection</string>
    <string name="please_connect_to_internet">Please connect to Internet</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <style name="backdrop">Backdrop Image</style>
    <style name="poster_image">Poster Image</style>

    <string name="runtime">%dh %dm</string>
    <string name="episodeRuntime">%dmin</string>
    <string name="quote">\"%s\"</string>
    <string name="no_data">-No Data-</string>
    <string name="no_genre_data">-No Genre Data-</string>
    <string name="message_undo">Undo delete previous item?</string>
    <string name="message_ok">OK</string>

    <string name="random">Random</string>
    <string name="latest_release">Latest Release</string>
    <string name="oldest_release">Oldest Release</string>
    <string name="best_vote">Best Vote</string>
    <string name="worst_vote">Worst Vote</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="home">Home</string>
    <string name="trending_this_week">Trending this Week</string>
    <string name="search">Search</string>
    <string name="no_data_match">Sorry, no matching data</string>
    <string name="you_are_offline">You are offline. Please check your connection</string>
    <string name="star_icon">Star Icon</string>
    <string name="searching_the_movie">Searching the Movie…</string>
    <string name="empty_playlist_illustration">Empty Playlist Illustration</string>
    <string name="playlist">Playlist</string>
    <string name="empty_playlist">Empty Playlist.</string>
    <string name="empty_playlist_desc">You haven not added an item to playlist.</string>
    <string name="removed_from_playlist">Removed from Playlist</string>
    <string name="added_to_playlist">Added to Playlist</string>
    <string name="search_empty_result_illustration">Search Empty Result Illustration</string>
    <string name="please_try_searching_with_another_term">Please try searching with another keyword</string>
    <string name="no_matching_data">Sorry we couldn\'t find any matching data</string>
    <string name="movie_are_you_looking">What movie are you looking for?</string>
    <string name="search_your_favorite_movie">You can search your favorite movies or find similar results.</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="share">Share</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="on_playlist">On Playlist</string>
    <string name="overview">Overview</string>
    <string name="top_rated_tv_shows">Top Rated TV Shows</string>
    <string name="title_playlist">Playlist</string>
    <string name="popular">Popular</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.mikirinkode.kotakmovie</string>
    <string name="an_error_occurred_illustration">An Error Occurred Illustration</string>
    <string name="an_error_occurred">Oops… An Error Occurred.</string>
    <string name="check_keyword_or_connection">Please check your input keyword or your internet connection.</string>

    <string name="film_poster">film poster</string>
    <string name="movie_tv_show_backdrop">movie / tv show backdrop</string>
    <string name="movie_tv_show_poster">movie / tv show poster</string>
    <string name="title">Title</string>
    <string name="star_symbol">star symbol</string>
    <string name="rating_icon">Rating Icon</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_tv_show">TV Show</string>
    <string name="menu_playlist">Playlist</string>
    <string name="empty_playlist_description">You have not added an item to playlist.</string>
    <string name="empty_playlist_title">Empty Playlist.</string>
    <string name="no_internet_illustration">No Internet Illustration</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_description">You are Offline. Please check your internet connection</string>
    <string name="initial_state_illustration">Initial Search State Illustration</string>
    <string name="empty_search_result_title">Sorry we couldn\'t find any matching data</string>
    <string name="initial_search_title">What movie are you looking for?</string>
    <string name="initial_search_desc">You can search your favorite movies or find similar results.</string>
    <string name="empty_search_result_illustration">Search Empty State Illustration</string>
    <string name="empty_search_result_desc">Please try searching with another term</string>
    <string name="error_illustration">Error Illustration</string>
    <string name="error_title">Oops… An Error Occurred.</string>
    <string name="error_desc">Please check your internet connection and wait for a while. If the problem persists please contact our developer. Thank You.</string>
    <string name="play_trailer_button">Play Trailer Button</string>
    <string name="add_to_playlist_button">Add To Playlist Button</string>
    <string name="share_button">Share Button</string>
    <string name="share_to">Share To</string>
    <string name="loading_desc">Gathering all data, Please wait...</string>
    <string name="loading_title">Loading</string>
</resources>